--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "b4a": "^1.6.3",
-    "compact-encoding": "^2.11.0"
+    "compact-encoding": "^2.11.0",
+    "safety-catch": "^1.0.2"
   }
 }
