--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "b4a": "^1.6.3",
     "compact-encoding": "^2.11.0",
-    "safety-catch": "^1.0.2"
+    "safety-catch": "^1.0.2",
+    "streamx": "^2.13.2"
   }
 }
