--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tiny-buffer-rpc",
+  "name": "@holepunchto/tiny-buffer-rpc",
   "version": "1.0.0",
   "description": "Lightweight binary RPC",
   "main": "index.js",
